--- a/converter.html
+++ b/converter.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <p><a href="main_nav.html" class="back-link">На главную</a></p>
+        <p><a href="index.html" class="back-link">На главную</a></p>
 
     </div>
     <script src="script_converter.js"></script>
