--- a/allies.html
+++ b/allies.html
@@ -18,6 +18,6 @@
 <a href="nightshade.html" class="spirit-link">Паслен</a>
 </div>   
 
-        <p><a href="main_nav.html" class="back-link">Назад к навигации</a></p> </div>
+        <p><a href="index.html" class="back-link">Назад к навигации</a></p> </div>
 </body>
 </html>
